fix(web): table, align

--- a/style/web/components/table/_index.less
+++ b/style/web/components/table/_index.less
@@ -478,6 +478,10 @@
   }
 }
 
+.@{prefix}-table th.@{prefix}-align-right .@{prefix}-table__cell--title {
+  justify-content: flex-end;
+}
+
 /**
  * 有边框和无边框的图标排列不一样，需谨慎修改
  * 无边框模式，图标依次紧跟标题
@@ -648,10 +652,22 @@
   .@{prefix}-table__filter-icon-wrap {
     justify-content: flex-end;
   }
+  // 是否显示表格边框 和 对齐方式都决定着 排序图标 和 筛选图标的排列位置
   .@{prefix}-table__cell--sortable.@{prefix}-table__cell--filterable {
     .@{prefix}-table__filter-icon-wrap {
       justify-content: space-between;
       flex: 1;
+    }
+  }
+}
+
+// 是否显示表格边框 和 对齐方式都决定着 排序图标 和 筛选图标的排列位置
+.@{prefix}-table {
+  .@{prefix}-align-center {
+    .@{prefix}-table__cell--sortable,
+    .@{prefix}-table__cell--filterable {
+      display: flex;
+      justify-content: space-around;
     }
   }
 }
